# AuTom

AuTom/lib/ann_1.2/: CMakeLists.txt
AuTom/lib/ann_1.2/include/ANN/: ANN.h
AuTom/lib/msg_map/: CMakeLists.txt
AuTom/lib/msg_map/core/: CMakeLists.txt  msg.h  msg_map.cpp  msg_map.h  proc_state.h  proxy.cpp  proxy.h  thread.cpp  thread.h
AuTom/lib/msg_map/custom/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  custom.cpp  custom.h
AuTom/lib/msg_map/custom/core/: Makefile  cmake_install.cmake
AuTom/lib/msg_map/custom/custom/: Makefile  cmake_install.cmake
AuTom/src/: CMakeLists.txt
AuTom/src/ProjectionError/src/: CMakeLists.txt  ProjectionErrorStraight  ProjectionErrorStraight.cu  ProjectionErrorStraight.d  atom.h  makefile  mrc_file.cu  mrc_file.d  mrc_file.h  run.sh
AuTom/src/atomalign/: CMakeLists.txt
AuTom/src/atomalign/bundle/: CMakeLists.txt  bundle_core.cpp  bundle_core.h  geometry_data.h  img_projs.cpp  img_projs.h  params.cpp  params.h  sfm_driver.cpp  sfm_driver.h  triangulate.cpp  triangulate.h
AuTom/src/atomalign/doc/: xf_format.txt  关于atomalign中图像坐标系及模型世界坐标系的一些补充说明.txt  关于newstack及xf的一些补充说明.txt
AuTom/src/atomalign/interpret/: CMakeLists.txt  interpret.cpp  interpret.h  object_estimate.cpp  object_estimate.h
AuTom/src/atomalign/keymatch/: CMakeLists.txt  match_core.cpp  match_core.h  method.cpp  method.h  ransac.h  support.cpp  support.h
AuTom/src/atomalign/main/: CMakeLists.txt  main.cpp  opts.h
AuTom/src/atomalign/mx2to3/: CMakeLists.txt  mx2to3.cpp  mx2to3.h
AuTom/src/atomalign/ransac/: CMakeLists.txt
AuTom/src/atomalign/sift/: CMakeLists.txt  datatype.h  macro.h  sift_core.cpp  sift_core.h
AuTom/src/coarsealign/main/: CMakeLists.txt  cr_align.c  cr_align_xyshift.c  cr_libfunc.c  cr_libfunc.h  cr_rotation.c  cr_xyshift.c  mrcfile.c  mrcfile.h  par2xf.c
AuTom/src/common/: CMakeLists.txt
AuTom/src/common/dataf/: calibration.h  camera.cpp  dataf.cpp  dataf.h
AuTom/src/common/dataf/tmp/: frame.h
AuTom/src/common/mrcimg/: CMakeLists.txt  GraphUtils.cpp  GraphUtils.h  img_util.h  mrc2img.cpp  mrc2img.h  mrcheader.h
AuTom/src/filter/: CMakeLists.txt
AuTom/src/filter/func/: CMakeLists.txt  simplex.cpp  simplex.h
AuTom/src/filter/nad/: CMakeLists.txt  Filter.cpp  Filter.h  Vector3.h  mrcheader.cpp  mrcheader.h
AuTom/src/filter/norm2d/: CMakeLists.txt  test.cpp  testnorm.cpp
AuTom/src/filter/testnad/: CMakeLists.txt  testchange.cpp  testconvolve.cpp  testcorr.cpp  testcvfun.cpp  testnad.cpp  testnad2d.cpp  testnad3d.cpp  testnadc.cpp  testpoint.cpp  testsingle.cpp
AuTom/src/markererase/: CMakeLists.txt
AuTom/src/markererase/inpaint/: CMakeLists.txt  inpaint_core.cpp  inpaint_core.h
AuTom/src/markererase/main/: CMakeLists.txt  main.cpp  opts.h
AuTom/src/mrcCombine/: CMakeLists.txt  main.cpp  opts.h
AuTom/src/mrcstack/: CMakeLists.txt  main.cpp  opts.h
AuTom/src/normcc/main/: CMakeLists.txt  main.cpp  opts.h
AuTom/src/tomomain/: CMakeLists.txt
AuTom/src/tomomain/ImageViewWindow/: CMakeLists.txt
AuTom/src/tomomain/ImageViewWindow/3drender/: CMakeLists.txt
AuTom/src/tomomain/ImageViewWindow/abstract/: CMakeLists.txt
AuTom/src/tomomain/ImageViewWindow/algorithm/: CMakeLists.txt
AuTom/src/tomomain/ImageViewWindow/model/: CMakeLists.txt  markmodel.cpp  mrcdatamodel.h
AuTom/src/tomomain/ImageViewWindow/slicemain/: CMakeLists.txt  slicemainwindow.cpp  slicemainwindow.h
AuTom/src/tomomain/ImageViewWindow/volumemain/: CMakeLists.txt  volumemainwindow.cpp  volumemainwindow.h
AuTom/src/tomomain/ImageViewWindow/widgets/: CMakeLists.txt  categorycontrolwidget.cpp  mainwindow.cpp  (+6 more)
AuTom/src/tomomain/ViewMRC/: CMakeLists.txt  ViewMRC.cpp  ViewMRC.cpp.bak
AuTom/src/tomomain/XyzTest/: CMakeLists.txt  main.cpp
AuTom/src/tomomain/XyzView/: CMakeLists.txt  ImgInfo.cpp  ImgInfo.h  XyzGL.cpp  XyzGL.h  XyzWindow.cpp  XyzWindow.h  b3dgfx.cpp  b3dgfx.h  func.cpp  func.h
AuTom/src/tomomain/env/: CMakeLists.txt  env.cpp  env.h
AuTom/src/tomomain/frame/: CCtrlPanel.cpp  CCtrlPanel.h  CMakeLists.txt  CMrcViewer.cpp  CMrcViewer.h  CSectTool.cpp  CSectTool.cpp.bak  CSectTool.h  CSectView.cpp  CSectView.h  CSliceView.cpp  CSliceView.h
AuTom/src/tomomain/geometry/: CMakeLists.txt  calibrate.cpp  calibrate.h
AuTom/src/tomomain/hatpixel/: CMakeLists.txt  main.cpp
AuTom/src/tomomain/init/: CMakeLists.txt  Cinit.cpp  Cinit.h
AuTom/src/tomomain/main/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
AuTom/src/tomomain/paramfile/: CMakeLists.txt  main.cpp
AuTom/src/tomomain/profunc/: CMakeLists.txt  profunc.cpp  profunc.cpp.bak  profunc.h  profunc.h.bak
AuTom/src/tomomain/promanage/: CMakeLists.txt  ProManage.cpp  ProManage.cpp.bak  ProManage.h
AuTom/src/tomomain/resource/: CMakeLists.txt  resource.qrc  resource.qrc.depends
AuTom/src/tomomain/utils/: CMakeLists.txt  InputSaver.cpp  InputSaver.h  SysInfo.cpp  SysInfo.h
AuTom/src/tomomain/widget/: AboutDialog.cpp  AboutDialog.h  AlignWin.cpp  AlignWin.h  CCanvas.cpp  CCanvas.h  CLabelSlider.cpp  CLabelSlider.h  CMakeLists.txt  CMultiSlider.cpp  CMultiSlider.h  CNewProject.cpp  CNewProject.h  CProgressBar.cpp  CProgressBar.h  CSelect.cpp  CSelect.h  CSetWorkSpace.cpp  CSetWorkSpace.cpp.bak  CSetWorkSpace.h  CSkeleton.cpp  CSkeleton.h  CSkip.cpp  CSkip.h  CTFSettingsDialog.cpp  CTFSettingsDialog.h  CTransparentDemarcater.cpp  CTransparentDemarcater.h  CTransparentFilm.cpp  CTransparentFilm.h  CoarseAlignWin.cpp  CoarseAlignWin.h  Ctag.cpp  Ctag.h  Editor.cpp  Editor.h  EvaluateWin.cpp  EvaluateWin.cpp.bak  EvaluateWin.h  Evaluate_tool.cpp  (+19 more)
AuTom/src/tomorec3d/: CMakeLists.txt
AuTom/src/tomorec3d/src/: CMakeLists.txt
AuTom/src/tomosect/: CMakeLists.txt
AuTom/src/tomosect/main/: CMakeLists.txt  main.cpp  opts.h
AuTom/src/tomosect/wbp/: CMakeLists.txt  wbp.cpp  wbp.h  wbp_core.cpp  wbp_core.h
AuTom/src/trajplot/: CMakeLists.txt
AuTom/src/trajplot/data/: TestTrajplot_ali.xf  TestTrajplot_new.tlt
AuTom/src/trajplot/lib/: CMakeLists.txt
AuTom/src/trajplot/src/: CMakeLists.txt
AuTom/src/xfproduct/: CMakeLists.txt  xfproduct.cpp
(+87 files in other folders)
