set(COMMON_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/common)
set(TOMOMAIN_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/tomomain)
set(ATOMALIGN_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/atomalign)
set(MARKERAUTO_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/markerauto)
set(MARKERERASE_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/markererase)
set(NORMCC_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/normcc)
set(COARSEALIGN_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/coarsealign)
set(TOMOSECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/tomosect)
set(FILTER_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/filter)
set(TOMOREC3D_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/tomorec3d)

#static_lib
#set(OPENCV_STATIC_LIBS libopencv_contrib.a libopencv_stitching.a libopencv_nonfree.a libopencv_superres.a libopencv_ts.a libopencv_videostab.a libopencv_gpu.a libopencv_photo.a libopencv_objdetect.a libopencv_legacy.a libopencv_video.a libopencv_ml.a libopencv_calib3d.a libopencv_features2d.a libopencv_highgui.a libopencv_imgproc.a  libopencv_flann.a libopencv_core.a -lglib-2.0 -lgthread-2.0 -lgmodule-2.0 -lgobject-2.0 -lfontconfig -lfreetype -lpango-1.0 -lcairo -lgdk_pixbuf-2.0 -lpangocairo-1.0 -lpangoft2-1.0 -lgio-2.0 -latk-1.0 -lgdk-x11-2.0 -lgtk-x11-2.0  librt.so libpthread.so m libdl.so libstdc++.a libz.so)
#dynamic_lib
set(OPENCV_STATIC_LIBS -lopencv_contrib -lopencv_stitching -lopencv_nonfree -lopencv_superres -lopencv_ts -lopencv_videostab -lopencv_gpu -lopencv_photo -lopencv_objdetect -lopencv_legacy -lopencv_video -lopencv_ml -lopencv_calib3d -lopencv_features2d -lopencv_highgui -lopencv_imgproc  -lopencv_flann -lopencv_core -lglib-2.0 -lgthread-2.0 -lgmodule-2.0 -lgobject-2.0 -lfontconfig -lfreetype -lpango-1.0 -lcairo -lgdk_pixbuf-2.0 -lpangocairo-1.0 -lpangoft2-1.0 -lgio-2.0 -latk-1.0 -lgdk-x11-2.0 -lgtk-x11-2.0  librt.so libpthread.so m libdl.so libstdc++.a libz.so)

include_directories(${COMMON_INCLUDE_DIR} ${ATOMALIGN_INCLUDE_DIR} ${TOMOMAIN_INCLUDE_DIR} ${MARKERERASE_INCLUDE_DIR}  ${MARKERAUTO_INCLUDE_DIR} ${NORMCC_INCLUDE_DIR} ${TOMOSECT_INCLUDE_DIR} ${FILTER_INCLUDE_DIR}${TOMOREC3D_INCLUDE_DIR})

#find_package(Qt4 REQUIRED PATH /home/liuce/project/qt4/qt-everywhere-opensource-src-4.8.1/build)
#SET(CMAKE_PREFIX_PATH /opt/Qt5.8.0/5.8/gcc_64/lib/cmake)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Core REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(Qt5OpenGL REQUIRED)

message(STATUS "Binary path is ${QT_BINARY_DIR}")
message(STATUS "Libs path is ${QT_LIBRARY_DIR}")
message(STATUS "Include path is ${QT_INCLUDE_DIR}")
message(STATUS "${QT_INCLUDES}")

add_subdirectory(common)
add_subdirectory(atomalign)
add_subdirectory(markererase)
add_subdirectory(tomomain)
add_subdirectory(normcc)
add_subdirectory(tomosect)
add_subdirectory(coarsealign)
add_subdirectory(filter)
add_subdirectory(tomorec3d)
add_subdirectory(trajplot)
add_subdirectory(ProjectionError)
add_subdirectory(mrcstack)
add_subdirectory(mrcCombine)
add_subdirectory(xfproduct)
