
add_subdirectory(main)
add_subdirectory(frame)
add_subdirectory(widget)
add_subdirectory(resource)
add_subdirectory(profunc)
add_subdirectory(env)
add_subdirectory(ImageViewWindow)
add_subdirectory(init)
add_subdirectory(promanage)
add_subdirectory(hatpixel)
add_subdirectory(paramfile)
add_subdirectory(geometry)
#add_subdirectory(XyzView)
##add_subdirectory(XyzTest)
##add_subdirectory(ViewMRC)
# add_subdirectory(ViewfidMode)
#add_subdirectory(ViewDetectFid)

add_subdirectory(utils)
